# Solving-problems-in-modern-C-

./: README.md
Task1/: CMakeLists.txt  task1.cpp
Task10/: CMakeLists.txt  main.cpp  number.h  numbers.cpp  numbers.h
Task11/: CMakeLists.txt  main.cpp  reader.cpp  reader.h
Task12/: CMakeLists.txt  main.cpp  main_parallel_version.cpp
Task13/Task13_no_proto/: CMakeLists.txt  input_reader.cpp  input_reader.h  pi_searcher.h
Task13/Task13_no_proto_build/: CMakeCache.txt  Makefile  cmake_install.cmake
Task13/Task13_proto/: CMakeLists.txt  input_reader.cpp  input_reader.h  nilakantha.proto  pi_no_proto.cpp  pi_number.proto  pi_proto.cpp  pi_searcher.cpp  pi_searcher.h  serialization.cpp  serialization.h
Task13/Task13_proto_build/: CMakeCache.txt  Makefile  cmake_install.cmake  nilakantha.pb.cc  nilakantha.pb.h  pi_number.pb.cc  pi_number.pb.h
Task14/Task14/: CMakeLists.txt  inspectorISBN.cpp  inspectorISBN.h  main.cpp
Task14/Task14_build/: CMakeCache.txt  Makefile  cmake_install.cmake
Task15/Task15/: CMakeLists.txt  ipv4.cpp  ipv4.h  main.cpp
Task15/Task15_build/: CMakeCache.txt  Makefile  cmake_install.cmake
Task16/Task16/: CMakeLists.txt  ipv4.cpp  ipv4.h  ipv4.proto  main.cpp  serialization.cpp  serialization.h
Task16/Task16_build/: CMakeCache.txt  Makefile  cmake_install.cmake  ipv4.pb.cc  ipv4.pb.h
Task17/Task17/: CMakeLists.txt  array.h  main.cpp
Task17/Task17/reserve/: array.h  main.cpp
Task17/Task17_build/: CMakeCache.txt  Makefile  cmake_install.cmake
Task18/Task18/: CmakeLists.txt  functions.h  main.cpp  tests.h
Task18/Task18_build/: CMakeCache.txt  Makefile  cmake_install.cmake
Task2/: CMakeLists.txt  Task2.cpp
Task3/: CMakeLists.txt  task3.cpp
Task4/: CMakeLists.txt  Task4.cpp
Task5/: CMakeLists.txt  Task5.cpp
Task6/: CMakeLists.txt  Task6.cpp
Task7/: CMakeLists.txt  Task7.cpp  Task7paral.cpp
Task8/: main.cpp  reader.cpp  reader.h
Task9/: CMakeLists.txt  main.cpp  prime_factors_number.cpp  prime_factors_number.h  simple_numbers.cpp  simple_numbers.h
